--- a/ColorMyViews/app/src/main/res/values/colors.xml
+++ b/ColorMyViews/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="green_a700">#12C700</color>
+    <color name="orange_900">#E54304</color>
+    <color name="amber_500">#FFC107</color>
+
 </resources>
