--- a/AndroidTrivia/app/src/main/res/layout/activity_main.xml
+++ b/AndroidTrivia/app/src/main/res/layout/activity_main.xml
@@ -27,10 +27,12 @@
              Use com.example.android.navigation.TitleFragment for the android:name
              Use match_parent for the layout_height and layout_width -->
         <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/title_fragment"
-            android:name="com.example.android.navigation.TitleFragment"
+            android:id="@+id/nav_host_fragment"
+            android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            app:defaultNavHost="true"
+            app:navGraph="@navigation/nav_graph" />
     </LinearLayout>
 
 </layout>
