--- a/AndroidTrivia/app/src/main/res/navigation/nav_graph.xml
+++ b/AndroidTrivia/app/src/main/res/navigation/nav_graph.xml
@@ -36,8 +36,7 @@
         <action
             android:id="@+id/action_gameWonFragment_to_gameFragment"
             app:destination="@id/gameFragment"
-            app:popUpTo="@id/gameFragment"
-            app:popUpToInclusive="true" />
+            app:popUpTo="@id/titleFragment" />
     </fragment>
     <fragment
         android:id="@+id/gameOverFragment"
@@ -47,7 +46,6 @@
         <action
             android:id="@+id/action_gameOverFragment_to_gameFragment"
             app:destination="@id/gameFragment"
-            app:popUpTo="@id/gameFragment"
-            app:popUpToInclusive="true" />
+            app:popUpTo="@id/titleFragment" />
     </fragment>
 </navigation>
