--- a/AndroidTrivia/app/src/main/res/layout/activity_main.xml
+++ b/AndroidTrivia/app/src/main/res/layout/activity_main.xml
@@ -17,22 +17,36 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
+    <androidx.drawerlayout.widget.DrawerLayout
+        android:id="@+id/drawerLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <!-- TODO (04) Add a fragment tag for the titleFragment in the LinearLayout
-             Use @+id/titleFragment for the android:id
-             Use com.example.android.navigation.TitleFragment for the android:name
-             Use match_parent for the layout_height and layout_width -->
-        <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/nav_host_fragment"
-            android:name="androidx.navigation.fragment.NavHostFragment"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:defaultNavHost="true"
-            app:navGraph="@navigation/nav_graph" />
-    </LinearLayout>
+            android:orientation="vertical">
+
+            <!-- TODO (04) Add a fragment tag for the titleFragment in the LinearLayout
+                 Use @+id/titleFragment for the android:id
+                 Use com.example.android.navigation.TitleFragment for the android:name
+                 Use match_parent for the layout_height and layout_width -->
+            <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/nav_host_fragment"
+                android:name="androidx.navigation.fragment.NavHostFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:defaultNavHost="true"
+                app:navGraph="@navigation/nav_graph" />
+        </LinearLayout>
+
+        <com.google.android.material.navigation.NavigationView
+            android:id="@+id/nav_view"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            app:headerLayout="@layout/nav_header"
+            app:menu="@menu/nav_drawer_menu" />
+    </androidx.drawerlayout.widget.DrawerLayout>
 
 </layout>
