--- a/GuessTheWord/app/src/main/res/layout/game_fragment.xml
+++ b/GuessTheWord/app/src/main/res/layout/game_fragment.xml
@@ -68,6 +68,23 @@
             tools:text="&quot;Tuna&quot;" />
 
         <TextView
+            android:id="@+id/hint_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:fontFamily="sans-serif"
+            android:text="@{gameViewModel.wordHint}"
+            android:textColor="@color/grey_text_color"
+            android:textSize="20sp"
+            android:textStyle="normal"
+            app:layout_constraintBottom_toTopOf="@+id/timer_text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:text="Current word has 6 letters \nThe letter at position 4 in N" />
+
+        <TextView
             android:id="@+id/timer_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
