--- a/GuessTheWord/app/src/main/res/layout/game_fragment.xml
+++ b/GuessTheWord/app/src/main/res/layout/game_fragment.xml
@@ -72,6 +72,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:fontFamily="sans-serif"
@@ -82,6 +83,8 @@
             app:layout_constraintBottom_toTopOf="@+id/timer_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/word_text"
+            app:layout_constraintVertical_bias="1.0"
             tools:text="Current word has 6 letters \nThe letter at position 4 in N" />
 
         <TextView
