--- a/TrackMySleepQuality/app/src/main/res/layout/list_item_sleep_night.xml
+++ b/TrackMySleepQuality/app/src/main/res/layout/list_item_sleep_night.xml
@@ -23,11 +23,11 @@
             android:id="@+id/quality_image"
             android:layout_width="@dimen/icon_size"
             android:layout_height="60dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:importantForAccessibility="no"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:sleepImage="@{sleep}"
@@ -38,11 +38,9 @@
             android:id="@+id/quality_string"
             android:layout_width="0dp"
             android:layout_height="20dp"
-            android:layout_marginEnd="16dp"
-            android:textAlignment="center"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintEnd_toEndOf="@id/quality_image"
+            app:layout_constraintStart_toStartOf="@id/quality_image"
             app:layout_constraintTop_toBottomOf="@id/quality_image"
             app:sleepQualityString="@{sleep}"
             tools:text="Excellent!!!" />
