--- a/MarsRealEstate/app/src/main/res/layout/activity_main.xml
+++ b/MarsRealEstate/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
   ~
   -->
 
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.fragment.app.FragmentContainerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_host_fragment"
     android:name="androidx.navigation.fragment.NavHostFragment"
